# dlfmt

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  perf.data.old  vcpkg.json
.github/workflows/: ci-release.yml
extension/dlfmt/: CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
include/dl/: arena.h  ast.h  ast_manager.h  ast_new.h  ast_printer.h  ast_printer_new.h  ast_tools.h  parser.h  parser_new.h  timer.h  token.h  tokenizer.h
src/: ast_tools.cpp  parser.cpp  parser_new.cpp  tokenizer.cpp
toolchains/: mingw-windows-x64.cmake
